--- a/springboot/src/main/resources/templates/listUser.html
+++ b/springboot/src/main/resources/templates/listUser.html
@@ -11,10 +11,14 @@
          <tr>
              <td>用户名</td>
              <td>用户密码</td>
+             <td>操作</td>
          </tr>
         <tr th:each="user,stateUser:${userList}">
             <td th:text="${user.userName}"></td>
-            <td th:text="${user.userPassword}"></td>
+            <td th:text="${user.password}"></td>
+            <td><a th:href="@{delUser(id=${user.userId})}">删除</a>/
+                <a th:href="@{gotoUpdate(id=${user.userId})}">修改</a>
+            </td>
         </tr>
 
     </table>
